# tracera-coding-assessment

./: .dockerignore  .env.example  .gitignore  Dockerfile  ML_Intern_Assessment.docx  Makefile  README.md  main.py  pyproject.toml  requirements.txt
Notebook/: Project_Walkthrough.ipynb
cache/: test10_9e7e00720a64915dbe9cf949b0932484.md  test11_cff30a58e73a613041f4b8855505635a.md  test12_380fe9c0e6e0626ce32849dc88fc8e44.md  test1_76e40f6009e4490ae78c217c250d4331.md  test2_45c531d366063575854d95182c203b16.md  test3_60d3b462f8f25c40756605e36f4f3c5e.md  test4_3baff9abdd20aa8bd4820c1b9290a17c.md  test5_c1d0077b4bc131e1df44e30a34fbd3db.md  test6_aa984141440e170db35dda4b5b46cd4c.md  test7_e492e9827eb06858ff8dd1d5aff431a1.md  test8_787eaacf6529f722f0e0d8a400076bef.md  test9_8099b848c6dc7c66828374a3a6d17646.md
data/: ground_truth.csv
output/: extracted_data.csv  extracted_data_example.csv
src/: config.py  dummy.py  main.py  schemas.py
src/utils/: data_extractor.py  file_handler.py  llm_service.py  metric.py  pdf_parser.py
tests/: dummy_test.py  test_extraction_logic.py
