[project]
name = "tracera-coding-assessment"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Vatsal Thakkar", email = "vatsalthakkar3.vt@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langchain-openai>=0.3.31",
    "llama-parse>=0.6.62",
    "notebook>=7.4.5",
    "numpy>=2.3.2",
    "openai>=1.101.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.2",
    "pdf2image>=1.17.0",
    "pydantic>=2.11.7",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "coverage>=7.10.5",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.10",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "*/__init__.py",
]
